--- a/Biblioteka/Views/Shared/_Layout.cshtml
+++ b/Biblioteka/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Książki", "Index", "Book")</li>
+                    <li>@Html.ActionLink("Książki", "Index", "Books")</li>
                     <li>@Html.ActionLink("O mnie", "About", "Home")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Dodaj książkę", "AddBook", "Book")</li>
+                    <li>@Html.ActionLink("Dodaj książkę", "Create", "Books")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
