--- a/Biblioteka/Views/Books/Delete.cshtml
+++ b/Biblioteka/Views/Books/Delete.cshtml
@@ -6,10 +6,8 @@
 
 <h2>Usuwanie</h2>
 
-<h3>Czy napewno chcesz usunąć?</h3>
+<h3>Czy napewno chcesz usunąć tę książkę?</h3>
 <div>
-    <h4>Książkę</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayName("Tytuł")
