--- a/Biblioteka/Views/Books/Index.cshtml
+++ b/Biblioteka/Views/Books/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Biblioteka.Models.Data_Models.Books>
+﻿@model Biblioteka.Models.BookViewModel
 
 @{
     ViewBag.Title = "Index";
@@ -35,35 +35,36 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.year)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.cover)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.isFavorite)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.isOnShelf)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.isOnWishList)
-        </td>
-        <td>
-            @Html.ActionLink("Edytuj", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Szczegóły", "Details", new { id=item.id }) |
-            @Html.ActionLink("Usuń", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
+            @foreach (var item in Model.Book)
+            {
+                <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.year)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.cover)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.isFavorite)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.isOnShelf)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.isOnWishList)
+                </td>
+                <td>
+                    @Html.ActionLink("Edytuj", "Edit", new { id = item.id }) |
+                    @Html.ActionLink("Szczegóły", "Details", new { id = item.id }) |
+                    @Html.ActionLink("Usuń", "Delete", new { id = item.id })
+                </td>
+            </tr>
+            }
 
 </table>
