Changed: adding and editing photos of authors and covers of books

--- a/Biblioteka/Views/Authors/Details.cshtml
+++ b/Biblioteka/Views/Authors/Details.cshtml
@@ -63,7 +63,10 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.photo)
+            @if (Model.photo != null)
+            {
+                <img src="~/img/photos/@Model.photo" width="130" height="200" />
+            }
         </dd>
 
     </dl>
