--- a/Biblioteka/Views/Authors/Edit.cshtml
+++ b/Biblioteka/Views/Authors/Edit.cshtml
@@ -1,71 +1,88 @@
-﻿@model Biblioteka.Models.Data_Models.Authors
+﻿@model Biblioteka.Models.CombinedDataModels
 
 @{
     ViewBag.Title = "Edit";
 }
 
+@{
+    List<SelectListItem> listItems = new List<SelectListItem>();
+    listItems.Add(new SelectListItem
+    {
+        Text = "Mężczyzna",
+        Value = "Mężczyzna"
+    });
+    listItems.Add(new SelectListItem
+    {
+        Text = "Kobieta",
+        Value = "Kobieta"
+    });
+}
+
 <h2>Edytuj</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Authors", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(model => model.Authors.id)
 
         <div class="form-group">
             @Html.Label("Imię", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.firstName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.firstName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Authors.firstName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Authors.firstName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Nazwisko", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.lastName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.lastName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Authors.lastName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Authors.lastName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Data urodzenia", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.birthDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.birthDate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Authors.birthDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Authors.birthDate, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Płeć", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.sex, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.sex, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.Authors.sex, listItems, "-- Wybierz płeć --", new { @class = "form-control" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Kraj urodzenia", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.birthPlace, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.birthPlace, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Authors.birthPlace, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Authors.birthPlace, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Biografia", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BIO, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BIO, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Authors.BIO, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Authors.BIO, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Zdjęcie", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.photo, new { htmlAttributes = new { @class = "form-control" } })
+                @if (Model.Authors.photo != null)
+                {
+                    <img src="~/img/photos/@Model.Authors.photo" width="130" height="200" />
+                }
+                <input id="photo" type="file" name="photo" />
                 @Html.ValidationMessageFor(model => model.photo, "", new { @class = "text-danger" })
             </div>
         </div>
