--- a/Biblioteka/Views/Authors/Index.cshtml
+++ b/Biblioteka/Views/Authors/Index.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Autorzy</h2>
 
-<p>
+@*<p>
     @Html.ActionLink("Dodaj", "Create")
-</p>
+    </p>*@
 <table class="table">
     <tr>
         <th>
@@ -55,9 +55,12 @@
         <td>
             @Html.DisplayFor(modelItem => item.BIO)
         </td>
+
         <td>
-            @Html.DisplayFor(modelItem => item.photo)
+            @if (item.photo != null)
+            {<img src="~/img/photos/@item.photo" width="130" height="200" /> }
         </td>
+
         <td>
             @Html.ActionLink("Edytuj", "Edit", new { id=item.id }) |
             @Html.ActionLink("Szczegóły", "Details", new { id=item.id }) |
