--- a/Biblioteka/Views/Books/Create.cshtml
+++ b/Biblioteka/Views/Books/Create.cshtml
@@ -19,7 +19,7 @@
 
 <h2>Dodaj książkę</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Books", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -70,8 +70,8 @@
         <div class="form-group">
             @Html.Label("Okładka", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Books.cover, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Books.cover, "", new { @class = "text-danger" })
+                <input id="cover" type="file" name="cover" />
+                @Html.ValidationMessageFor(model => model.cover, "", new { @class = "text-danger" })
             </div>
         </div>
         @* -----------------------------------------------------------------------------------*@
@@ -127,8 +127,8 @@
         <div class="form-group">
             @Html.Label("Zdjęcie", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Authors.photo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Authors.photo, "", new { @class = "text-danger" })
+                <input id="photo" type="file" name="photo" />
+                @Html.ValidationMessageFor(model => model.photo, "", new { @class = "text-danger" })
             </div>
         </div>
 
