--- a/Biblioteka/Views/Books/Details.cshtml
+++ b/Biblioteka/Views/Books/Details.cshtml
@@ -39,7 +39,10 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.cover)
+            @if (Model.cover != null)
+            {
+                <img src="~/img/covers/@Model.cover" width="130" height="200" />
+            }
         </dd>
 
         <dt>
