--- a/Biblioteka/Views/Books/Edit.cshtml
+++ b/Biblioteka/Views/Books/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Biblioteka.Models.Data_Models.Books
+﻿@model Biblioteka.Models.CombinedDataModels
 
 @{
     ViewBag.Title = "Edytuj";
@@ -6,7 +6,7 @@
 
 <h2>Edytuj</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Books", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -14,36 +14,40 @@
         <h4>Książkę</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(model => model.Books.id)
 
         <div class="form-group">
             @Html.Label("Tytuł", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Books.title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Books.title, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Rok wydania", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.year, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.year, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Books.year, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Books.year, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Opis", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Books.description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Books.description, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Okładka", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.cover, new { htmlAttributes = new { @class = "form-control" } })
+                @if (Model.Books.cover != null)
+                {
+                    <img src="~/img/covers/@Model.Books.cover" width="130" height="200" />
+                }
+                <input id="cover" type="file" name="cover" />
                 @Html.ValidationMessageFor(model => model.cover, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -52,8 +56,8 @@
             @Html.Label("Ulubione", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.isFavorite)
-                    @Html.ValidationMessageFor(model => model.isFavorite, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Books.isFavorite)
+                    @Html.ValidationMessageFor(model => model.Books.isFavorite, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -62,8 +66,8 @@
             @Html.Label("Na półce", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.isOnShelf)
-                    @Html.ValidationMessageFor(model => model.isOnShelf, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Books.isOnShelf)
+                    @Html.ValidationMessageFor(model => model.Books.isOnShelf, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -72,8 +76,8 @@
             @Html.Label("Do przeczytania", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.isOnWishList)
-                    @Html.ValidationMessageFor(model => model.isOnWishList, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Books.isOnWishList)
+                    @Html.ValidationMessageFor(model => model.Books.isOnWishList, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
