--- a/Biblioteka/Views/Series/Index.cshtml
+++ b/Biblioteka/Views/Series/Index.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Cykle</h2>
 
-<p>
-    @Html.ActionLink("Dodaj", "Create")
-</p>
+@*<p>
+        @Html.ActionLink("Dodaj", "Create")
+    </p>*@
 <table class="table">
     <tr>
         <th>
@@ -24,7 +24,7 @@
         </td>
         <td>
             @Html.ActionLink("Edytuj", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Szczegóły", "Details", new { id=item.id }) |
+            @*@Html.ActionLink("Szczegóły", "Details", new { id=item.id }) |*@
             @Html.ActionLink("Usuń", "Delete", new { id=item.id })
         </td>
     </tr>
