--- a/Biblioteka/Views/Authors/Edit.cshtml
+++ b/Biblioteka/Views/Authors/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Biblioteka.Models.CombinedDataModels
+﻿@model Biblioteka.Models.AuthorDetailsModel
 
 @{
     ViewBag.Title = "Edit";
@@ -26,65 +26,84 @@
     
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Authors.id)
+        @Html.HiddenFor(model => model.Author.id)
 
         <div class="form-group">
             @Html.Label("Imię", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Authors.firstName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Authors.firstName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Author.firstName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Author.firstName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Nazwisko", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Authors.lastName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Authors.lastName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Author.lastName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Author.lastName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Data urodzenia", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Authors.birthDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Authors.birthDate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Author.birthDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Author.birthDate, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Płeć", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.Authors.sex, listItems, "-- Wybierz płeć --", new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.Author.sex, listItems, "-- Wybierz płeć --", new { @class = "form-control" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Kraj urodzenia", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Authors.birthPlace, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Authors.birthPlace, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Author.birthPlace, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Author.birthPlace, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Biografia", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Authors.BIO, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Authors.BIO, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Author.BIO, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Author.BIO, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Zdjęcie", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @if (Model.Authors.photo != null)
+                @if (Model.Author.photo != null)
                 {
-                    <img src="~/img/photos/@Model.Authors.photo" width="130" height="200" />
+                    <img src="~/img/photos/@Model.Author.photo" width="130" height="200" />
                 }
                 <input id="photo" type="file" name="photo" />
                 @Html.ValidationMessageFor(model => model.photo, "", new { @class = "text-danger" })
             </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Książki", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <br />
+                @foreach (var item in Model.Books)
+                {
+                    if (item.BooksChecked)
+                    {
+                            @item.Books.title
+                            if (item.Books.cover != null)
+                            {
+                                <img src="~/img/covers/@item.Books.cover" width="130" height="200" />
+                            }
+                    }
+
+                }
+           </div>
         </div>
 
         <div class="form-group">
