--- a/Biblioteka/Views/Books/Delete.cshtml
+++ b/Biblioteka/Views/Books/Delete.cshtml
@@ -44,7 +44,7 @@
             }
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayName("Ulubione")
         </dt>
 
@@ -53,11 +53,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayName("Na półce")
+            @Html.DisplayName("Przeczytane")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.isOnShelf)
+            @Html.DisplayFor(model => model.isRead)
         </dd>
 
         <dt>
@@ -66,7 +66,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.isOnWishList)
-        </dd>
+        </dd>*@
 
     </dl>
 
