--- a/Biblioteka/Views/Books/Edit.cshtml
+++ b/Biblioteka/Views/Books/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Biblioteka.Models.CombinedDataModels
+﻿@model Biblioteka.Models.BookDetailsModel
 
 @{
     ViewBag.Title = "Edytuj";
@@ -14,38 +14,38 @@
         <h4>Książkę</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Books.id)
+        @Html.HiddenFor(model => model.Book.id)
 
         <div class="form-group">
             @Html.Label("Tytuł", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Books.title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Books.title, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Book.title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Book.title, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Rok wydania", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Books.year, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Books.year, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Book.year, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Book.year, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Opis", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Books.description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Books.description, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Book.description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Book.description, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Okładka", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @if (Model.Books.cover != null)
+                @if (Model.Book.cover != null)
                 {
-                    <img src="~/img/covers/@Model.Books.cover" width="130" height="200" />
+                    <img src="~/img/covers/@Model.Book.cover" width="130" height="200" />
                 }
                 <input id="cover" type="file" name="cover" />
                 @Html.ValidationMessageFor(model => model.cover, "", new { @class = "text-danger" })
@@ -53,21 +53,68 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("Ulubione", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Books.isFavorite)
-                    @Html.ValidationMessageFor(model => model.Books.isFavorite, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            @Html.Label("Autorzy", htmlAttributes: new { @class = "control-label col-md-2" })
+            @foreach (var item in Model.Details)
+            {
+                if (item.AuthorChecked)
+                {
+                    <div class="col-md-10">
+                        @item.Author.firstName
+
+                        @item.Author.lastName
+                    </div>
+                }
+
+            }
+
         </div>
 
         <div class="form-group">
-            @Html.Label("Na półce", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Gatunki", htmlAttributes: new { @class = "control-label col-md-2" })
+            @foreach (var item in Model.Details)
+            {
+                if (item.GenreChecked)
+                {
+                    <div class="col-md-10">
+                        @item.Genre.genre
+                    </div>
+                }
+
+            }
+
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Cykle", htmlAttributes: new { @class = "control-label col-md-2" })
+            @foreach (var item in Model.Details)
+            {
+                if (item.SeriesChecked)
+                {
+                    <div class="col-md-10">
+                    @item.Series.series
+                    </div>
+                }
+
+            }
+
+        </div>
+
+        @*<div class="form-group">
+            @Html.Label("Ulubione", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.Books.isOnShelf)
-                    @Html.ValidationMessageFor(model => model.Books.isOnShelf, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.isFavorite)
+                    @Html.ValidationMessageFor(model => model.isFavorite, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>*@
+
+        @*<div class="form-group">
+            @Html.Label("Przeczytane", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.Book.isRead)
+                    @Html.ValidationMessageFor(model => model.Book.isRead, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -76,11 +123,11 @@
             @Html.Label("Do przeczytania", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.Books.isOnWishList)
-                    @Html.ValidationMessageFor(model => model.Books.isOnWishList, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Book.isOnWishList)
+                    @Html.ValidationMessageFor(model => model.Book.isOnWishList, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
