--- a/Biblioteka/Views/Books/Edit.cshtml
+++ b/Biblioteka/Views/Books/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Biblioteka.Models.BookDetailsModel
+@using Microsoft.AspNet.Identity
 
 @{
     ViewBag.Title = "Edytuj";
@@ -99,35 +100,38 @@
 
         </div>
 
-        @*<div class="form-group">
-            @Html.Label("Ulubione", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.isFavorite)
-                    @Html.ValidationMessageFor(model => model.isFavorite, "", new { @class = "text-danger" })
+        @if (Request.IsAuthenticated)
+        {
+            <div class="form-group">
+                @Html.Label("Ulubione", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.isFavorite)
+                        @Html.ValidationMessageFor(model => model.isFavorite, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
-        </div>*@
 
-        @*<div class="form-group">
-            @Html.Label("Przeczytane", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Book.isRead)
-                    @Html.ValidationMessageFor(model => model.Book.isRead, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.Label("Przeczytane", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.isRead)
+                        @Html.ValidationMessageFor(model => model.isRead, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.Label("Do przeczytania", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Book.isOnWishList)
-                    @Html.ValidationMessageFor(model => model.Book.isOnWishList, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.Label("Do przeczytania", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.isOnWishList)
+                        @Html.ValidationMessageFor(model => model.isOnWishList, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
-        </div>*@
+        }
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
