--- a/Biblioteka/Views/Authors/Index.cshtml
+++ b/Biblioteka/Views/Authors/Index.cshtml
@@ -12,9 +12,9 @@
     {
     <p>
         Autor: @Html.TextBox("searchAuthor")
-        <input type="submit" value="Szukaj" />
+        <input type="submit" value="Szukaj" class="btn btn-default"/>
         Sortowanie: @Html.DropDownList("Sort", "")
-        <input type="submit" value="Sortuj" />
+        <input type="submit" value="Sortuj" class="btn btn-default"/>
     </p>
     }
 <table class="table">
