--- a/Biblioteka/Views/Books/Index.cshtml
+++ b/Biblioteka/Views/Books/Index.cshtml
@@ -14,9 +14,9 @@
         Tytuł: @Html.TextBox("searchTitle")
         Autor: @Html.TextBox("searchAuthor")
         Gatunek: @Html.DropDownList("BookGenre", "")
-        <input type="submit" value="Szukaj" />
+        <input type="submit" value="Szukaj" class="btn btn-default"/>
         Sortowanie: @Html.DropDownList("Sort","")
-        <input type="submit" value="Sortuj" />
+        <input type="submit" value="Sortuj" class="btn btn-default"/>
     </p>
     }
 
