--- a/Biblioteka/Views/Home/Index.cshtml
+++ b/Biblioteka/Views/Home/Index.cshtml
@@ -3,10 +3,10 @@
 }
 
 <div class="jumbotron">
-    <h1>Biblioteka</h1>
+    <h1>Domowa Biblioteka</h1>
     <p class="lead">
                     Użytkownik ma możliwość wprowadzać do bazy danych książki, które znajdują się w jego prywatnej kolekcji. 
-                    Otrzyma możliwość przeglądania swojej kolekcji (sortowania jej na różne sposoby), oznaczania książek jako przeczytane i oceniania ich.
+                    Otrzyma możliwość przeglądania swojej kolekcji (sortowania jej na różne sposoby), oznaczania książek jako ulubione, przeczytane lub do przeczytania oraz do oceniania ich i komentowania.
     </p>
 </div>
 
@@ -14,7 +14,7 @@
     <div class="col-md-4">
         <h2>Książki</h2>
         <p>
-            Umieszczaj informacje na temat interesujących cię książek, takie jak tytuł, cykl, rok wydania, opis i okładka.
+            Umieszczaj informacje na temat interesujących cię książek, takie jak tytuł, gatunek, cykl, rok wydania, opis i okładka.
         </p>
     </div>
     <div class="col-md-4">
@@ -22,7 +22,7 @@
         <p>Umieszczaj informacje na temat autorów książek, takie jak imię i nazwisko, data i miejsce urodzenia, płeć, biografię oraz zdjęcie.</p>
     </div>
     <div class="col-md-4">
-        <h2>Gatunki</h2>
-        <p> Umieszczaj informacje o gatunkach książek.</p>
+        <h2>Logowanie</h2>
+        <p> Niezalogowany użytkownik nie ma dostępu do pewnych funkcji takich jak m.in dodawanie książek do ulubionych czy oceniania.</p>
     </div>
 </div>
