--- a/Biblioteka/Views/Books/Create.cshtml
+++ b/Biblioteka/Views/Books/Create.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Create";
 }
+
 @{
     List<SelectListItem> listItems = new List<SelectListItem>();
     listItems.Add(new SelectListItem
@@ -132,6 +133,15 @@
             </div>
         </div>
 
+        @*@Html.Partial("_Authors_Partial", Model)
+        <div id="someDiv">
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="button" id="Button1" value="Dodaj kolejnego autora" />
+            </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -144,3 +154,13 @@
 <div>
     @Html.ActionLink("Powrót", "Index")
 </div>
+
+@*<script>
+    document.getElementById("Button1").onclick = function () { myFunction() };
+
+    function myFunction()
+    {
+        $("#someDiv").load('@Url.Action("NextAuthor","Books")');
+    }
+
+</script>*@
