--- a/Biblioteka/Views/Series/Create.cshtml
+++ b/Biblioteka/Views/Series/Create.cshtml
@@ -14,8 +14,9 @@
         <h4>Cykl</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
-            @Html.Label("Cykl", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.series, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.series, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.series, "", new { @class = "text-danger" })
