changed favorites to show in another view (enables sorting and searching), some small fixes

--- a/Biblioteka/Views/Books/Details.cshtml
+++ b/Biblioteka/Views/Books/Details.cshtml
@@ -119,9 +119,12 @@
                 @Html.DisplayName("Ocena")
             </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.rating)/10
-            </dd>
+            if (Model.rating != 0)
+            {
+                <dd>
+                    @Html.DisplayFor(model => model.rating)/10
+                </dd>
+            }
 
             <dt>
                 @Html.DisplayName("Komentarz")
