--- a/Biblioteka/Views/Books/Edit.cshtml
+++ b/Biblioteka/Views/Books/Edit.cshtml
@@ -42,7 +42,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.cover, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Okładka", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @if (Model.Book.cover != null)
                 {
@@ -142,7 +142,8 @@
             <div class="form-group">
                 @Html.Label("Ocena", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("Rating", "")
+                    
+                    @Html.DropDownList("Rating")
                     @Html.ValidationMessageFor(model => model.rating, "", new { @class = "text-danger" })
                 </div>
             </div>
