--- a/Biblioteka/Views/Manage/ChangePassword.cshtml
+++ b/Biblioteka/Views/Manage/ChangePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Biblioteka.Models.ChangePasswordViewModel
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Zmień hasło";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,30 +8,30 @@
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
+    <h4>Formularz zmiany hasła</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
+        @Html.Label("Stare hasło", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
+        @Html.Label("Nowe hasło", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        @Html.Label("Potwierdź nowe hasło", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+            <input type="submit" value="Zmień hasło" class="btn btn-default" />
         </div>
     </div>
 }
