--- a/Biblioteka/Views/Manage/SetPassword.cshtml
+++ b/Biblioteka/Views/Manage/SetPassword.cshtml
@@ -5,15 +5,15 @@
 
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Nie posiadasz lokalnego loginu/hasła. Dodaj konto lokalne
+    aby nie logować się za pomocą zewnętrznych serwisów.
 </p>
 
 @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
 
-    <h4>Create Local Login</h4>
+    <h4>Stwórz lokalne konto</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
