fixed searching and sorting in favorites, read and onwishlist

--- a/Biblioteka/Views/Books/Favorite.cshtml
+++ b/Biblioteka/Views/Books/Favorite.cshtml
@@ -7,7 +7,7 @@
 <h2>@ViewBag.Title</h2>
 
 <p>
-    @using (Html.BeginForm("Index", "Books", FormMethod.Get))
+    @using (Html.BeginForm("Favorite", "Books", FormMethod.Get))
     {
     <p>
         Tytuł: @Html.TextBox("searchTitle")
