--- a/Biblioteka/Views/Home/Index.cshtml
+++ b/Biblioteka/Views/Home/Index.cshtml
@@ -19,10 +19,11 @@
     </div>
     <div class="col-md-4">
         <h2>Autorzy</h2>
-        <p>Umieszczaj informacje na temat autorów książek, takie jak imię i nazwisko, data i miejsce urodzenia, płeć, biografię oraz zdjęcie.</p>
+        <p>Umieszczaj informacje na temat autorów książek, takie jak imię i nazwisko, data i miejsce urodzenia, płeć, biografię oraz zdjęcie. <br/>
+        UWAGA! Przy dodawaniu książki, jeśli autor znajduje się już w bazie wystarczy podać Imię i Nazwisko (nie trzeba wszystkiego wypełniać za każdym razem)</p>
     </div>
     <div class="col-md-4">
         <h2>Logowanie</h2>
-        <p> Niezalogowany użytkownik nie ma dostępu do pewnych funkcji takich jak m.in dodawanie książek do ulubionych czy oceniania.</p>
+        <p> Niezalogowany użytkownik nie ma dostępu do pewnych funkcji takich jak m.in dodawanie książek do ulubionych/przeczytanych/do przeczytania czy oceniania i komentowania.</p>
     </div>
 </div>
